--- a/src/package.json
+++ b/src/package.json
@@ -15,9 +15,11 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
+    "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-webpack-plugin": "^2.4.2",
