--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
+    "bootstrap-loader": "^3.0.3",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.0",
@@ -27,6 +28,8 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "*",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "purgecss-webpack-plugin": "^1.4.0",
+    "resolve-url-loader": "^3.0.1",
     "sass-loader": "*",
     "script-loader": "^0.7.2",
     "style-loader": "^0.23.1",
