--- a/src/package.json
+++ b/src/package.json
@@ -37,12 +37,15 @@
     "url-loader": "*",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.2.1",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch --info-verbosity verbose --mode=development",
-    "build:prod": "webpack -p --mode=production"
+    "build": "webpack-dev-server --open --config webpack.dev.js --watch",
+    "build-watch": "webpack --watch --info-verbosity verbose --mode=development",
+    "build:prod": "webpack --config webpack.prod.js",
+    "build:prod-old": "webpack -p --mode=production"
   },
   "author": "",
   "license": "ISC"
