--- a/src/package.json
+++ b/src/package.json
@@ -42,8 +42,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server --open --config webpack.dev.js --watch",
-    "build-watch": "webpack --watch --info-verbosity verbose --mode=development",
+    "build": "webpack --config webpack.dev.js --watch",
+    "build-dev": "webpack --watch --info-verbosity verbose --mode=development",
     "build:prod": "webpack --config webpack.prod.js",
     "build:prod-old": "webpack -p --mode=production"
   },
