--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "copy-webpack-plugin": "^5.0.2",
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.6.0",
     "imagemin-jpegtran": "^6.0.0",
@@ -30,8 +31,10 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "purgecss-webpack-plugin": "^1.4.0",
     "resolve-url-loader": "^3.0.1",
+    "responsive-loader": "^1.2.0",
     "sass-loader": "*",
     "script-loader": "^0.7.2",
+    "sharp": "^0.22.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "*",
@@ -42,8 +45,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.dev.js --watch",
-    "build-dev": "webpack --watch --info-verbosity verbose --mode=development",
+    "build": "webpack --config webpack.dev.js --watch --mode development",
+    "build-dev": "webpack-dev-server --config webpack.dev.js --watch --info-verbosity verbose --mode=development",
     "build:prod": "webpack --config webpack.prod.js",
     "build:prod-old": "webpack -p --mode=production"
   },
