--- a/src/package.json
+++ b/src/package.json
@@ -46,7 +46,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.dev.js --watch --mode development",
-    "build-dev": "webpack webpack-dev-server --config webpack.dev.js --watch --info-verbosity verbose --mode=development",
+    "build-dev": "webpack-dev-server --config webpack.dev.js --watch --info-verbosity verbose --mode=development",
     "build:prod": "webpack --config webpack.prod.js",
     "build:prod-old": "webpack -p --mode=production"
   },
