--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "babel-loader": "^8.0.5",
+    "basscss": "^8.0.10",
     "bootstrap-loader": "^3.0.3",
     "clean-webpack-plugin": "^2.0.1",
     "copy-webpack-plugin": "^5.0.2",
